Bug 117161 - REPORTBUILDER - Horizontal align isn't shown while editing the report
Summary: REPORTBUILDER - Horizontal align isn't shown while editing the report
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0 target:6.0.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Database-Reports-Builder
  Show dependency treegraph
 
Reported: 2018-04-22 15:53 UTC by Robert Großkopf
Modified: 2018-04-26 14:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Open the report "Diagramm_Vorlage". Have a look at the header and then execute the report ... (37.50 KB, application/vnd.oasis.opendocument.database)
2018-04-22 15:53 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2018-04-22 15:53:41 UTC
Created attachment 141542 [details]
Open the report "Diagramm_Vorlage". Have a look at the header and then execute the report ...

Open the attached database with LO 5.4.0.3 or newer.
Open the report "Diagramm_Vorlage" for editing.
Header "Teilnehmerzahl nach Geschlecht" should be centered, but isn't shown centered while editing.
"Geschlecht:" and "Anzahl:" should be aligned at the right, but isn't shown so while editing.
Execute the report and it will be shown right.

Tested with different LO-versions. Last version without this buggy behavior is 5.3.7.2. Fails with every newer version up to LO 6.0.4.1.
Tested with OpenSUSE 42.3 64bit rpm Linux.
Comment 1 Alex Thurgood 2018-04-23 07:15:40 UTC Comment hidden (obsolete)
Comment 2 Alex Thurgood 2018-04-23 07:16:04 UTC Comment hidden (obsolete)
Comment 3 Buovjaga 2018-04-23 13:21:15 UTC
Confirmed.

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: 14184060bd2249a492ea44d36463914c421e6ce5
CPU threads: 8; OS: Linux 4.16; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on April 23rd 2018
Comment 4 Buovjaga 2018-04-23 19:42:08 UTC
Hmm, now I realised that I had been testing Geschlecht_Diagramm, because Diagramm_Vorlage is not even shown in the reports list in master. If I try to open it in 6.0, it says that it requires the Oracle Report Builder feature.

However, I will try to bisect the centering bug in Geschlecht_Diagramm
Comment 5 Buovjaga 2018-04-23 20:06:22 UTC
Bisect blames https://cgit.freedesktop.org/libreoffice/core/commit/?id=5d0e485e827057eee9fb2c997685690b710e7f34

commit 5d0e485e827057eee9fb2c997685690b710e7f34 (patch)
tree c83057f1e85195379451fafe32b274065f99167e
parent ed6c5a4908edb7d4ab075127b710a92e2abc753f (diff)
use actual UNO enums in reportdesign..svtools
Change-Id: Idcd916382b87f8542dc6b5cdcb5ecb01d6947203
Reviewed-on: https://gerrit.libreoffice.org/36043

Adding Noel to CC
Comment 6 Commit Notification 2018-04-25 06:28:21 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b4ba8dc9ef1635c75b363838b6016d3851387020

tdf#117161 ReportBuilder horizontal align wrong when editing

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2018-04-26 08:53:02 UTC
Verified in

Version: 6.1.0.0.alpha1+
Build ID: 653e58f9eb3d4ee61d8103993cdff2660c9127a5
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Noel, thanks for fixing this!

should it be backported to 6.0 ?
Comment 8 Noel Grandin 2018-04-26 09:01:16 UTC
backport in progress:
    https://gerrit.libreoffice.org/53495
Comment 9 Commit Notification 2018-04-26 14:18:35 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=151e7be164774da3251ee06be872cc85a1a9dfb7&h=libreoffice-6-0

tdf#117161 ReportBuilder horizontal align wrong when editing

It will be available in 6.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.