tdf#117161 ReportBuilder horizontal align wrong when editing

regression from
	commit 5d0e485e827057eee9fb2c997685690b710e7f34
	use actual UNO enums in reportdesign..svtools

Also make some of the "template<> set" property helpers only fire on
actual property change

Reviewed-on: https://gerrit.libreoffice.org/53412
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit b4ba8dc9ef1635c75b363838b6016d3851387020)

Change-Id: I930fd255d287c3c7e5b064823fd1e8d4b665eae0
Reviewed-on: https://gerrit.libreoffice.org/53495
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>